style.css
/* ... */
.portfolio-thumb {
    margin-bottom: 24px;
}

.portfolio-row {
    margin-bottom: 44px;
    margin-top: 50px;
}

.avatar {
    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
}

.black-background {
    background-color: rgba(165, 147, 99, 0.7);
    padding: 40px 40px 40px 40px;
}

.bold-link {
    font-weight: 900;
    text-decoration: underline!important;
}

.bgc-white {
    background-color: #FFFFFF;
}

.bgc-dark-slate-blue {
    background-color: #364577;
}

.bgc-atomic-tangerine {
    background-color: #F3976C;
}

.tc-white {
    color: #fab493!important;
}

.tc-white2 {
    color: white;
}

.row > h2{
    background-color: rgba(165, 147, 99, 0.7);
    padding: 40px 40px 40px 40px;
    width: 450px;
    margin: auto;
    color: white;
}

.btn-atomic-tangerine {
    background: #F3976C;
    color: #303030!important;
}

.btn-atomic-tangerine:hover {
    background: #303030!important;
    color: #F3976C!important;
}

.ltc-white {
    color: #FFFFFF!important;
}

.ltc-white:hover {
    color: #cccccc!important;
}

.ltc-atomic-tangerine {
    color: #F3976C!important;
}

.ltc-atomic-tangerine:hover {
    color: #c27956!important;
}

.icon-dark-slate-blue {
    color: #364577!important;
    border-color: #364577!important;
}

.bg-dots-bg {
    background-image: url("img/dots-bg.png");
}

.bg-lines-h2-bg {
    background-image: url("img/lines-h2-bg.png");
}

.bg-banniere {
    background-image: url("img/la-chouette-agence-banniere.jpg");
}

.bg-presentation {
    background-image: url("img/image-de-presentation.jpg");
}

#bloc-7 .bloc-lg .row {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#bloc-7 .bloc-lg .row .col-sm-6 p {
    text-align: center;
    padding-top: 20px;
}

.col-sm-3 .text-center .social{
    font-size: 20px;
}

.col-sm-3 .text-center .social:hover{
    color : white;
}

@media (max-width: 1024px) {
    .bloc {
        padding-left: 20px;
        padding-right: 20px;
    }
    .bloc.full-width-bloc,
    .bloc-tile-2.full-width-bloc .container,
    .bloc-tile-3.full-width-bloc .container,
    .bloc-tile-4.full-width-bloc .container {
        padding-left: 0;
        padding-right: 0;
    }
}

@media (max-width: 992px) and (min-width: 768px) {
    .navbar .nav {
        max-width: 80%
    }
    .nav-center.navbar .nav {
        max-width: 100%
    }
}

@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
    .b-parallax {
        background-attachment: scroll;
    }
}

@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
    .b-parallax {
        background-attachment: scroll;
    }
}

@media (max-width: 991px) {
    .container {
        width: 100%;
    }
    .b-parallax {
        background-attachment: scroll;
    }
    .page-container,
    #hero-bloc {
        overflow-x: hidden;
        position: relative;
    }
    .bloc {
        padding-left: constant(safe-area-inset-left);
        padding-right: constant(safe-area-inset-right);
    }
    .bloc-group,
    .bloc-group .bloc {
        display: block;
        width: 100%;
    }
    .bloc-fill-screen .fill-bloc-top-edge,
    .bloc-fill-screen .fill-bloc-bottom-edge {
        padding: 0 20px;
        padding-left: constant(safe-area-inset-left);
        padding-right: constant(safe-area-inset-right);
    }
}
/* ... */

